Trying to fix Safari on iPhones

--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,12 @@ body {
   transition: all 0.5s ease-in;
   cursor: pointer;
 }
+
+/* FIX FOR SAFARI ON IPHONES */
+.safari-fix {
+  text-align: center;
+}
+
+.safari-fix .btn-choice {
+  display: inline-block;
+}
